# zkteco-firmware

./: CMakeLists.txt
push/: 3des.c  3des.h  Makefile  cmd.h  cmd_get.c  cmd_post.c  data_list.c  data_list.h  fuliye.c  fuliye.h  fw_api.h  http.c  http.h  lib.c  lib.h  pipe.c  pipe.h  pushsdk.c  pushsdk.h  strlist.h  tcp.c  tcp.h  thread.c  thread.h
trunk/M880trunk/: backup_restore.c  backup_restore.h  commu.c  commu.h  convert.c  flashdb.c  hid_iclass.c  hid_iclass.h  lock.c  lock.h  logquery.c  lzoconf.h  main.c  main.h  msg.c  msg.h  net.c  net.h  options.c  options.h  ssracc.c  ssracc.h  tcpcomm.c  tcpcomm.h  utils2.c  utils2.h
trunk/M880trunk/iclock/: pushapi.c  pushapi.h  pushsdk_lib_api.h
trunk/M880trunk/webinterface/: webfirmware.h  webinterface.h
